--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "steam_games_sale",
+  "name": "steam_store_scraper",
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
